--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           </div>
           <div
             class="absolute right-0 bg-white rounded-full flex justify-center items-center p-5 border-4 border-pink-500">
-            <image class="w-16 h-16" src="/images/tailwind.png" />
+            <img alt="image" class="w-16 h-16" src="/images/tailwind.png" />
           </div>
         </div>
       </div>
